--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 </head>
+
 <body>
-    
+    <div class="page">
+        <header>
+            <img src="images/logo.svg" alt="logo Huddle">
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
+    </div>
 </body>
+
 </html>
